--- a/cmd.Args.Tests/cmd.Args.Tests.csproj
+++ b/cmd.Args.Tests/cmd.Args.Tests.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{484323B1-0628-440A-B396-41943ABC9F1A}</ProjectGuid>
+    <ProjectGuid>{48EB1AFC-64C3-4CA4-A947-5206EC4A7C8D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>cmd.Tests</RootNamespace>
-    <AssemblyName>cmd.Tests</AssemblyName>
+    <RootNamespace>cmd.Args.Tests</RootNamespace>
+    <AssemblyName>cmd.Args.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,13 +32,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,34 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HelperClasses\ProgressBar.cs" />
-    <Compile Include="Helpers\CLTests.cs" />
-    <Compile Include="Helpers\CmdTableTests.cs" />
-    <Compile Include="HtmlCmdLineTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tables\TablesParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\sunamo\cmd\cmd.csproj">
       <Project>{ea7fb898-ad1b-401d-ac59-29e1bf80564b}</Project>
       <Name>cmd</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\sunamo\shared\shared.csproj">
-      <Project>{77719c0d-7c8b-4b9e-a644-aee7ceb35134}</Project>
-      <Name>shared</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\sunamo\sunamo\sunamo.csproj">
       <Project>{f6f92307-b0b3-4d6c-bd9c-8b5ff5560dcf}</Project>
       <Name>sunamo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TestValues\TestValues.csproj">
-      <Project>{5f7eb2b6-465b-4f1c-a164-2c933b25f7c1}</Project>
-      <Name>TestValues</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
